--- a/src/app/app-shell/app-shell.component.scss
+++ b/src/app/app-shell/app-shell.component.scss
@@ -10,7 +10,7 @@ body {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 .bg-primary {
-  background-color: #62bd69!important;
+  background-color: #22ac16!important;
 }
 @media (min-width: 992px) {
   .navbar-expand-lg {
