--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,18 @@ $primary: #22ac16;
 @import '~bootstrap/scss/mixins';
 @import '~bootstrap/scss/utilities';
 
+:root {
+  --body-bg: #{$white} ;
+  --body-color: #{$gray-900};
+}
+@media (prefers-color-scheme: dark) {
+  :root {
+    --body-bg: #{$black} ;
+    --body-color: #{$gray-100};
+  }
+}
+$body-bg: var(--body-bg);
+$body-color: var(--body-color);
 
 // Layout & components
 
