--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,24 +1,8 @@
-$primary: #22ac16;
+@import 'styles/importable';
 
-@import '~bootstrap/scss/functions';
-@import '~bootstrap/scss/variables';
-@import '~bootstrap/scss/mixins';
-@import '~bootstrap/scss/utilities';
-
-:root {
-  --body-bg: #{$white} ;
-  --body-color: #{$gray-900};
-}
-@media (prefers-color-scheme: dark) {
-  :root {
-    --body-bg: #{$black} ;
-    --body-color: #{$gray-100};
-  }
-}
-$body-bg: var(--body-bg);
-$body-color: var(--body-color);
 body {
   overscroll-behavior: none;
+  background-color: $primary!important;
 }
 
 // Layout & components
