--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 @import 'styles/importable';
 
 body {
+  overflow: hidden;
   overscroll-behavior: none;
   background-color: $primary!important;
 }
