--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -10,11 +10,24 @@
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
       >
-        <path fill-rule="evenodd"
+        <path
+          fill-rule="evenodd"
           d="M11.251.068a.5.5 0 01.227.58L9.677 6.5H13a.5.5 0 01.364.843l-8 8.5a.5.5 0 01-.842-.49L6.323 9.5H3a.5.5 0 01-.364-.843l8-8.5a.5.5 0 01.615-.09z"
-          clip-rule="evenodd"
         />
       </svg>
     </span>
   </div>
 </nav>
+<main
+  class="container text-center flex-fill d-flex flex-column justify-content-around"
+>
+  <h1>Water level</h1>
+  <section>
+    <h2>Top planter</h2>
+    <sg-water-level></sg-water-level>
+  </section>
+  <section>
+    <h2>Bottom planter</h2>
+    <sg-water-level></sg-water-level>
+  </section>
+</main>
