--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -24,10 +24,10 @@
   <h1>Water level</h1>
   <section>
     <h2>Top planter</h2>
-    <sg-water-level></sg-water-level>
+    <sg-water-level [level]="topLevel"></sg-water-level>
   </section>
   <section>
     <h2>Bottom planter</h2>
-    <sg-water-level></sg-water-level>
+    <sg-water-level [level]="bottomLevel"></sg-water-level>
   </section>
 </main>
