--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -22,6 +22,23 @@
   class="container text-center flex-fill d-flex flex-column justify-content-around"
 >
   <h1>Water level</h1>
+  <div *ngIf="showNotifyMe">
+    <button class="btn btn-primary btn-lg rounded-pill" (click)="notifyMe()">
+      <svg
+        class="bi bi-bell-fill"
+        width="1em"
+        height="1em"
+        viewBox="0 0 16 16"
+        fill="currentColor"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M8 16a2 2 0 002-2H6a2 2 0 002 2zm.995-14.901a1 1 0 10-1.99 0A5.002 5.002 0 003 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901z"
+        />
+      </svg>
+      Notify me
+    </button>
+  </div>
   <section>
     <h2>Top planter</h2>
     <sg-water-level [level]="topLevel"></sg-water-level>
