--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
     <span class="navbar-brand">Smart Garden</span>
-    <span class="text-danger">
+    <span class="text-danger" *ngIf="showError">
       <svg
         class="bi bi-lightning-fill"
         width="1.5em"
