--- a/src/app/shared/water-level/water-level.component.html
+++ b/src/app/shared/water-level/water-level.component.html
@@ -22,7 +22,7 @@
   <polygon
     points="25,70 25,90 75,90 75,70"
     style="fill: var(--red);"
-    *ngIf="level < 25"
+    *ngIf="level < 25 && level !== null"
   />
   <polyline
     points="10,10 25,90 75,90 90,10"
