--- a/app/src/app/main/main.component.html
+++ b/app/src/app/main/main.component.html
@@ -61,10 +61,10 @@
   </div>
   <section>
     <h2>Top planter</h2>
-    <sg-water-level [level]="topLevel"></sg-water-level>
+    <sg-water-level [level]="topLevel" [refresh]="refresh"></sg-water-level>
   </section>
   <section>
     <h2>Bottom planter</h2>
-    <sg-water-level [level]="bottomLevel"></sg-water-level>
+    <sg-water-level [level]="bottomLevel" [refresh]="refresh"></sg-water-level>
   </section>
 </main>
