--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -35,7 +35,7 @@ body {
 //@import '~bootstrap/scss/tooltip';
 //@import '~bootstrap/scss/popover';
 //@import '~bootstrap/scss/carousel';
-//@import '~bootstrap/scss/spinners';
+@import '~bootstrap/scss/spinners';
 
 // Helpers
 
