--- a/app/src/app/shared/water-level/water-level.component.html
+++ b/app/src/app/shared/water-level/water-level.component.html
@@ -6,31 +6,31 @@
 >
   <polygon
     points="10,10 25,90 75,90 90,10"
-    style="fill: var(--blue);"
+    style="fill: var(--bs-blue);"
     *ngIf="level >= 75"
     [class.refresh]="refresh"
   />
   <polygon
     points="15,30 25,90 75,90 85,30"
-    style="fill: var(--yellow);"
+    style="fill: var(--bs-yellow);"
     *ngIf="level < 75 && level >= 50"
     [class.refresh]="refresh"
   />
   <polygon
     points="20,50 25,90 75,90 80,50"
-    style="fill: var(--orange);"
+    style="fill: var(--bs-orange);"
     *ngIf="level < 50 && level >= 25"
     [class.refresh]="refresh"
   />
   <polygon
     points="25,70 25,90 75,90 75,70"
-    style="fill: var(--red);"
+    style="fill: var(--bs-red);"
     *ngIf="level < 25 && level !== null"
     [class.refresh]="refresh"
   />
   <polyline
     points="10,10 25,90 75,90 90,10"
-    style="fill: transparent; stroke: var(--gray); stroke-width: 10;"
+    style="fill: transparent; stroke: var(--bs-gray); stroke-width: 10;"
     stroke-linecap="round"
   />
 </svg>
